changed background for visibility issued

--- a/css/main.css
+++ b/css/main.css
@@ -73,7 +73,7 @@ img {
   .sidenav a {font-size: 18px;}
 }
 
-body {
+body{
 
-    background: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2015/04/colortheory.jpg");
+    background: img("water.jpg");
 }
